# Depth-Anything-3

./: .gitignore  BENCHMARK_ANALYSIS.md  benchmark_payload.py  benchmark_validation_cpu_mps.json  benchmark_validation_results_cuda.json  generate_benchmark_report.py  pyproject.toml  requirements.txt
benchmarks/: flash_attention_benchmark.py  full_benchmark.py
scripts/: deploy_hf.sh
src/depth_anything_3/: api.py
src/depth_anything_3/app/: gradio_app.py
src/depth_anything_3/optimizations/: mps_optimizer.py
src/depth_anything_3/utils/: memory.py
